# ci-gamificator-py

./: alembic.ini  db_init.sh  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: b498855af1f9_initial_migration.py
app/: crud.py  database.py  initial_data.py  main.py  models.py  schemas.py
app/db/: crud.py  database.py  initial_data.py  models.py  schemas.py
app/db/migrations/: env.py
app/db/migrations/versions/: 4f6d5474da8b_initial_migration.py
app/templates/: leaderboard.html
tests/: test_main.py
