[tool.poetry]
name = "ci-gamificator-py"
version = "0.1.0"
description = ""
authors = ["kamesan1577 <kamesan1577@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
